refactor(security): unify login method spi and rework config namespace